[package]
name = "code-squirrel"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]

[dependencies]
clap = "2.26"
error-chain = "0.11"
futures = "0.1"
ignore = "0.2"
glob = "0.2"
notify = "4.0"
rand = "0.3"
serde = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rusqlite]
version = "0.12"
features = ["chrono"]