[package]
name = "squirrel"
version = "0.1.1"
authors = ["James Elford <james.p.elford@gmail.com>"]

[dependencies]
chrono = "0.4"
clap = "2.26"
env_logger = "0.4"
error-chain = "0.11"
futures = "0.1"
glob = "0.2"
ignore = "0.2"
log = "0.3"
notify = "4.0"
rand = "0.3"
rusqlite = "0.12"
serde = "1.0"
